--- a/web/style/style.css
+++ b/web/style/style.css
@@ -88,10 +88,13 @@ body {
     outline: none;
     cursor: pointer;
     transition: .5s;
+    border-radius: 30px;
 }
 
 .logbtn:hover {
     background-position: right;
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #2becfa;
 }
 
 .resbtn {
@@ -105,10 +108,13 @@ body {
     outline: none;
     cursor: pointer;
     transition: .5s;
+    border-radius: 30px;
 }
 
 .resbtn:hover {
     background-position: right;
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #f1669c;
 }
 
 .bottom-text {
